no image problem solved

--- a/page1/index.html
+++ b/page1/index.html
@@ -14,7 +14,7 @@
     <div class="wrapper">
         <div class="left-box">
             <div class="img-box">
-                <img class="img" src="img/office.jpg" alt="" width="88.65%" height="200%">
+                <img class="img" src="../img/office.jpg" alt="" width="88.65%" height="200%">
             </div>
 
             <h1 class="bottom-caption">
