Page 4 Done with Styles

--- a/page4/index.html
+++ b/page4/index.html
@@ -1,66 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-
-    <title></title>
-    <link href="fonts/Roboto-Light.ttf">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
+    <title>Page 4</title>
 </head>
-
-
 <body>
-    <header></header>
-    <div class="wrapper">
-        <div class="left-box"><img class="img" src="img/office.jpg" alt="">
-            <p class="bottom-caption">
-                The traveler’s first and independent
-                source of information for finding the
-                ideal hotel at the lowest rates.
-            </p>
-        </div>
-        <div class="right-box"></div>
-
-
-
-        <div class=""></div>
-        <div class="title">
-            <h2>Welcome to Trivago</h2>
-
-        </div>
-        <div class="para" style="font-family: font1">
-            <p>As the world’s largest hotel search, trivago compares deals from
-                over 700,000 hotels on more than 175 booking sites daily on our
-                mission to be and remain <em> <b> the traveler’s first and independent
-                        source of information for finding the ideal hotel
-                        at the lowest rates.</b></em> </p>
-
-            <p> This is what we - a team of over 500 innovative, driven minds
-                from all over the globe - wake up for every day. We love what
-                we do, and our passion to create the most effective, user-friendly
-                hotel search website is not only felt in our offices in Düsseldorf
-                and Palma but is also prominent in the product we create.
-            </p>
-            <p>
-                On over 45 platforms and in more than 25 languages, you can
-                witness the results of merging world-class search technology
-                with eye-catching design and outstanding hotel content.
-            </p>
-            <p>
-                No matter where in the world you are searching, trivago is your
-                partner in locating a home away from home – and for an average
-                of 35% savings per booking, feeling at home has never been
-                easier on the pocketbook. Boasting a growth rate of 100% every
-                year since 2008, we have bloomed into one of Europe’s most
-                well-known travel brands, and by fostering over 50 million
-                hotel/guest connections per month, we are making our way
-                to the center of the travel industry.
-            </p>
-            <p>
-                Welcome to trivago. It’s nice to see you here.
-            </p>
+    <div class="header"></div>
+    <div class="empty-space"></div>
+    <div class="up-container">
+        <div class="up-left"></div>
+        <div class="up-right">
+            <div class="up-right-title">
+                <h2>Reputation Ranking</h2>
+            </div>
+            <div class="up-right-description">
+                <p>Sint ex amet laborum in incididunt fugiat occaecat consectetur eu proident. Dolore officia do proident do eu nulla aliquip minim incididunt nulla duis. Adipisicing sint anim cupidatat irure consectetur id deserunt reprehenderit sunt.</p>
+                <p>Et consequat quis reprehenderit irure fugiat officia ut non mollit fugiat. Est adipisicing labore cupidatat veniam sunt qui ex aute occaecat et. In fugiat velit incididunt incididunt sunt laboris quis cupidatat in commodo. Aliqua cupidatat ipsum eu aute ad. Ad fugiat fugiat anim enim do exercitation. Sit dolore consectetur elit eu eu cillum.</p>
+            </div>
         </div>
     </div>
+    <div class="mid-container">
+        <div class="col-1">
+        <div class="in-img-0"></div>
+        </div>
+        <div class="col-2">
+            <div class="in-img-1"></div>
+            <div class="in-img-2"></div>
+        </div>
+        <div class="col-3">
+            <div class="in-img-3"></div>
+            <div class="in-img-4"></div>
+            <div class="in-img-5"></div>
+        </div>
+    </div>
+    <div class="down-container">
+            <div class="down-left"></div>
+            <div class="down-right">
+                <div class="down-right-title">
+                    <h2><img src="icon.svg"></img> HPI (Hotel Price Index)</h2>
+                </div>
+                <div class="down-right-description">
+                    <p>Sint ex amet laborum in incididunt fugiat occaecat consectetur eu proident. Dolore officia do proident do eu nulla aliquip minim incididunt nulla duis. Adipisicing sint anim cupidatat irure consectetur id deserunt reprehenderit sunt.</p>
+                    <p>Et consequat quis reprehenderit irure fugiat officia ut non mollit fugiat. Est adipisicing labore cupidatat veniam sunt qui ex aute occaecat et. In fugiat velit incididunt incididunt sunt laboris quis cupidatat in commodo. Aliqua cupidatat ipsum eu aute ad. Ad fugiat fugiat anim enim do exercitation. Sit dolore consectetur elit eu eu cillum.</p>
+                </div>
+            </div>
+        </div>
+        <div class="empty-space"></div>
 </body>
-
 </html>
