--- a/page5/index.html
+++ b/page5/index.html
@@ -1,66 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-
-    <title></title>
-    <link href="fonts/Roboto-Light.ttf">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
+    <title>Page 5</title>
 </head>
-
-
 <body>
-    <header></header>
-    <div class="wrapper">
-        <div class="left-box"><img class="img" src="img/office.jpg" alt="">
-            <p class="bottom-caption">
-                The traveler’s first and independent
-                source of information for finding the
-                ideal hotel at the lowest rates.
-            </p>
-        </div>
-        <div class="right-box"></div>
-
-
-
-        <div class=""></div>
-        <div class="title">
-            <h2>Welcome to Trivago</h2>
-
-        </div>
-        <div class="para" style="font-family: font1">
-            <p>As the world’s largest hotel search, trivago compares deals from
-                over 700,000 hotels on more than 175 booking sites daily on our
-                mission to be and remain <em> <b> the traveler’s first and independent
-                        source of information for finding the ideal hotel
-                        at the lowest rates.</b></em> </p>
-
-            <p> This is what we - a team of over 500 innovative, driven minds
-                from all over the globe - wake up for every day. We love what
-                we do, and our passion to create the most effective, user-friendly
-                hotel search website is not only felt in our offices in Düsseldorf
-                and Palma but is also prominent in the product we create.
-            </p>
-            <p>
-                On over 45 platforms and in more than 25 languages, you can
-                witness the results of merging world-class search technology
-                with eye-catching design and outstanding hotel content.
-            </p>
-            <p>
-                No matter where in the world you are searching, trivago is your
-                partner in locating a home away from home – and for an average
-                of 35% savings per booking, feeling at home has never been
-                easier on the pocketbook. Boasting a growth rate of 100% every
-                year since 2008, we have bloomed into one of Europe’s most
-                well-known travel brands, and by fostering over 50 million
-                hotel/guest connections per month, we are making our way
-                to the center of the travel industry.
-            </p>
-            <p>
-                Welcome to trivago. It’s nice to see you here.
-            </p>
+    <div class="header"></div>
+    <div class="up-container">
+        <div class="block">
+            <div class="block-title">
+                <h2>Online Press Room</h2>
+            </div>
         </div>
     </div>
+    <div class="footer-container">
+        <div class="left-col">
+            <div class="left-title">
+                <h2>www.lol.com</h2>
+            </div>
+            <div class="left-container">
+                <div class="phone-box">
+                        <img class="phone-icon" src="phone.svg" alt="Phone Icon" width="100px" height="100px" >
+                        <h2 class="phone-title">+00 111 010 00 01</h2>
+                </div>
+                <div class="hour-box">
+                        <img class="hour-icon" src="hour.svg" alt="Hour Icon" width="100px" height="100px" >
+                        <h2 class="hour-title">+00 111 010 00 01</h2>
+                </div>
+                <div class="email-box">
+                        <img class="email-icon" src="email.svg" alt="Email Icon" width="100px" height="100px" >
+                        <a class="email-title" href="mailto:email@lol.com">email@lol.com</a>
+                </div>
+            </div>
+        </div>
+        <div class="right-col">
+            <div class="footer-title">
+                <h2>trivago<br>communication<br>contact info</h2>
+            </div>
+            <div class="footer-email">
+                <a class="email-container" href="mailto:email@lol.com">hi@lol.com</a><br><br>
+                <a class="email-container" href="mailto:email@lol.com">hello@lol.com</a>
+            </div>
+        </div>
+    </div>
+    <div class="empty-space"></div>
 </body>
-
 </html>
