--- a/page2/index.html
+++ b/page2/index.html
@@ -12,54 +12,98 @@
 <body>
     <header></header>
     <div class="wrapper">
-        <div class="left-box"><img class="img" src="img/office.jpg" alt="">
-            <p class="bottom-caption">
-                The traveler’s first and independent
-                source of information for finding the
-                ideal hotel at the lowest rates.
-            </p>
+        <div class="top-box">
+            <div class="empty-div"></div>
+
+
+            <div class="growth">
+                <div class="numbers"></div>
+                <div class="text"></div>
+            </div>
+            <div class="leads">
+                <div class="numbers"></div>
+                <div class="text"></div>
+            </div>
+            <div class="knows">
+                <div class="numbers"></div>
+                <div class="text"></div>
+            </div>
+            <div class="turnover">
+                <div class="numbers"></div>
+                <div class="text"></div>
+            </div>
         </div>
-        <div class="right-box"></div>
 
-
-
-        <div class=""></div>
-        <div class="title">
-            <h2>Welcome to Trivago</h2>
-
+        <div class="mid-box">
+            <div class="img-box">
+                <img class="img" src="../img/social.jpg" alt="">
+            </div>
         </div>
-        <div class="para" style="font-family: font1">
-            <p>As the world’s largest hotel search, trivago compares deals from
-                over 700,000 hotels on more than 175 booking sites daily on our
-                mission to be and remain <em> <b> the traveler’s first and independent
-                        source of information for finding the ideal hotel
-                        at the lowest rates.</b></em> </p>
-
-            <p> This is what we - a team of over 500 innovative, driven minds
-                from all over the globe - wake up for every day. We love what
-                we do, and our passion to create the most effective, user-friendly
-                hotel search website is not only felt in our offices in Düsseldorf
-                and Palma but is also prominent in the product we create.
-            </p>
-            <p>
-                On over 45 platforms and in more than 25 languages, you can
-                witness the results of merging world-class search technology
-                with eye-catching design and outstanding hotel content.
-            </p>
-            <p>
-                No matter where in the world you are searching, trivago is your
-                partner in locating a home away from home – and for an average
-                of 35% savings per booking, feeling at home has never been
-                easier on the pocketbook. Boasting a growth rate of 100% every
-                year since 2008, we have bloomed into one of Europe’s most
-                well-known travel brands, and by fostering over 50 million
-                hotel/guest connections per month, we are making our way
-                to the center of the travel industry.
-            </p>
-            <p>
-                Welcome to trivago. It’s nice to see you here.
-            </p>
+    </div>
+    <div class="bottum-box">
+        <div class="twetter">
+            <div class="icon-box">
+                <img class="icon" src="../img/icons/" alt="">
+            </div>
+            <div class="numbers">
+                <p></p>
+            </div>
+            <div class="text">
+                <p></p>
+            </div>
         </div>
+
+        <div class="fb">
+            <div class="icon-box">
+                <img class="icon" src="../img/icons/" alt="">
+            </div>
+            <div class="numbers">
+                <p></p>
+            </div>
+            <div class="text">
+                <p></p>
+            </div>
+        </div>
+        <div class="g+">
+            <div class="icon-box">
+                <img class="icon" src="../img/icons/" alt="">
+            </div>
+            <div class="numbers">
+                <p></p>
+            </div>
+            <div class="text">
+                <p></p>
+            </div>
+        </div>
+        <div class="pintrest">
+            <div class="icon-box">
+                <img class="icon" src="../img/icons/" alt="">
+            </div>
+            <div class="numbers">
+                <p></p>
+            </div>
+            <div class="text">
+                <p></p>
+            </div>
+        </div>
+        <div class="yt">
+            <div class="icon-box">
+                <img class="icon" src="../img/icons/" alt="">
+            </div>
+            <div class="numbers">
+                <p></p>
+            </div>
+            <div class="text">
+                <p></p>
+            </div>
+        </div>
+
+
+    </div>
+
+
+
+
     </div>
 </body>
 
