--- a/page1/index.html
+++ b/page1/index.html
@@ -18,11 +18,11 @@
             </div>
 
             <h1 class="bottom-caption">
-                <img class="start-quotation" src="img/quotation.png" alt="">
+                <img class="start-quotation" src="../img/quotation.png" alt="">
                 The traveler’s first and independent
                 source of information for finding the
                 ideal hotel at the lowest rates.
-                <br> <img class="end-quotation" src="img/quotation.png" alt="">
+                <br> <img class="end-quotation" src="../img/quotation.png" alt="">
             </h1>
         </div>
 
