Some Comments Added

--- a/page5/index.html
+++ b/page5/index.html
@@ -8,7 +8,10 @@
     <title>Page 5</title>
 </head>
 <body>
+    <!-- Header Start-->
     <div class="header"></div>
+    <!-- Header End -->
+    <!-- Upper Container Start -->
     <div class="up-container">
         <div class="block">
             <div class="block-title">
@@ -16,7 +19,10 @@
             </div>
         </div>
     </div>
+    <!-- Upper Container End -->
+    <!-- Footer Container Start -->
     <div class="footer-container">
+        <!-- Left Column -->
         <div class="left-col">
             <div class="left-title">
                 <h2>www.lol.com</h2>
@@ -36,6 +42,7 @@
                 </div>
             </div>
         </div>
+        <!-- Right Column -->
         <div class="right-col">
             <div class="footer-title">
                 <h2>trivago<br>communication<br>contact info</h2>
@@ -46,6 +53,9 @@
             </div>
         </div>
     </div>
+    <!-- Footer Container End -->
+    <!-- Empty White Space Start -->
     <div class="empty-space"></div>
+    <!-- Empty White Space End -->
 </body>
 </html>
