Added comments to the first page

--- a/page1/index.html
+++ b/page1/index.html
@@ -4,14 +4,16 @@
 <head>
 
     <title></title>
+    <!-- Links to stylesheets and font -->
     <link href="fonts/Roboto-Light.ttf">
     <link rel="stylesheet" href="style.css">
 </head>
 
-
 <body>
     <header></header>
+    <!-- Division for a wrapper that includes the content of the page -->
     <div class="wrapper">
+        <!-- Contains the image and the bottom caption, along with the quotation marks -->
         <div class="left-box">
             <div class="img-box">
                 <img class="img" src="../img/office.jpg" alt="" width="88.65%" height="200%">
@@ -25,7 +27,7 @@
                 <br> <img class="end-quotation" src="../img/quotation.png" alt="">
             </h1>
         </div>
-
+        <!-- Contains the title and paragraphs -->
         <div class="right-box">
             <div class="content">
                 <div class="title">
@@ -76,11 +78,6 @@
                 </div>
             </div>
         </div>
-
-
-
-
-
     </div>
 </body>
 
