--- a/page2/index.html
+++ b/page2/index.html
@@ -4,7 +4,7 @@
 <head>
 
     <title></title>
-    <link href="fonts/Roboto-Light.ttf">
+  
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -13,24 +13,32 @@
     <header></header>
     <div class="wrapper">
         <div class="top-box">
-            <div class="empty-div"></div>
+            <div class="top-box-1">
 
+                <div class="growth">
+                    <div class="top-box-1-numbers">100%</div>
+                    <div class="top-box-1-text">growth last 5 years</div>
+                </div>
 
-            <div class="growth">
-                <div class="numbers"></div>
-                <div class="text"></div>
+                <div class="knows">
+                    <div class="top-box-1-numbers">2 out of 3</div>
+                    <div class="top-box-1-text">Europeans know trivag</div>
+                </div>
             </div>
-            <div class="leads">
-                <div class="numbers"></div>
-                <div class="text"></div>
-            </div>
-            <div class="knows">
-                <div class="numbers"></div>
-                <div class="text"></div>
-            </div>
-            <div class="turnover">
-                <div class="numbers"></div>
-                <div class="text"></div>
+
+            <div class="top-box-2">
+                <div class="empty-div"></div>
+
+                <div class="leads">
+                    <div class="top-box-2-numbers">50 Million</div>
+                    <div class="top-box-2-text">leads per month</div>
+                </div>
+
+                <div class="turnover">
+                    <div class="top-box-2-numbers">2.5 Billion</div>
+                    <div class="top-box-2-text">turnover annually
+                        (direct volume)</div>
+                </div>
             </div>
         </div>
 
@@ -39,72 +47,71 @@
                 <img class="img" src="../img/social.jpg" alt="">
             </div>
         </div>
-    </div>
-    <div class="bottum-box">
+    
+
+    <div class="bottom-box">
         <div class="twetter">
             <div class="icon-box">
-                <img class="icon" src="../img/icons/" alt="">
+                <img class="icon" src="../img/icons/icn_social_twitter_light.svg" alt="">
             </div>
-            <div class="numbers">
-                <p></p>
+            <div class="social-numbers">
+                60,200+
             </div>
-            <div class="text">
-                <p></p>
-            </div>
+            <div class="social-text">
+                fans</div>
         </div>
 
         <div class="fb">
             <div class="icon-box">
-                <img class="icon" src="../img/icons/" alt="">
+                <img class="icon" src="../img/icons/icn_social_facebook_light.svg" alt="">
             </div>
-            <div class="numbers">
-                <p></p>
+            <div class="social-numbers">
+                1,730,000+
             </div>
-            <div class="text">
-                <p></p>
+            <div class="social-text">
+                fans
             </div>
         </div>
+
         <div class="g+">
             <div class="icon-box">
-                <img class="icon" src="../img/icons/" alt="">
+                <img class="icon" src="../img/icons/icn_social_googleplus_light.svg" alt="">
             </div>
-            <div class="numbers">
-                <p></p>
+            <div class="social-numbers">
+                4,310,000 +
             </div>
-            <div class="text">
-                <p></p>
+            <div class="social-text">
+                veiws
             </div>
         </div>
+
         <div class="pintrest">
             <div class="icon-box">
-                <img class="icon" src="../img/icons/" alt="">
+                <img class="icon" src="../img/icons/icn_pinterest_light.svg" alt="">
             </div>
-            <div class="numbers">
-                <p></p>
+            <div class="social-numbers">
+                1,300+
             </div>
-            <div class="text">
-                <p></p>
+            <div class="social-text">
+                fans
             </div>
         </div>
+
         <div class="yt">
             <div class="icon-box">
-                <img class="icon" src="../img/icons/" alt="">
+                <img class="icon" src="../img/icons/icn_youtube_light.svg" alt="">
             </div>
-            <div class="numbers">
-                <p></p>
+            <div class="social-numbers">
+                34,180,000+
             </div>
-            <div class="text">
-                <p></p>
+            <div class="social-text">
+                veiws
             </div>
         </div>
 
 
     </div>
-
-
-
-
-    </div>
+</div>
 </body>
 
 </html>
