page 3 done by ismail

--- a/page3/index.html
+++ b/page3/index.html
@@ -1,66 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="stylesheet" href="style.css">
+        <title>Page 4</title>
+    </head>
+    <body>
+        <!-- Top Border-->
+        <div class="header"></div>
 
-<head>
+        <!-- Right Space-->
+        <div class="empty-space"></div>
+        
+        <!--Top Description-->
+        <div class="up-container">
 
-    <title></title>
-    <link href="fonts/Roboto-Light.ttf">
-    <link rel="stylesheet" href="style.css">
-</head>
+            <!-- Description Left Space-->
+            <div class="up-left"></div>
 
+            <!-- Left Description -->
+            <div class="up-mid">
+                <div class="up-mid-title">
+                    <h2><img src="icon.svg"></img> Reputation Ranking</h2>
+                </div>
+                <div class="up-mid-description">
+                    <p> Sint ex amet laborum in incididunt fugiat occaecat consectetur eu proident.
+                        Dolore officia do proident do eu nulla aliquip minim incididunt nulla duis.
+                        Adipisicing sint anim cupidatat irure consectetur id deserunt reprehenderit sunt.
+                        strengthening the hotel brand, third party
+                        booking site involvement is eliminated – saving
+                        the hotelier commission costs.
+                    </p>
+                    <a href="#" class="mid-link">http://www.trivago.com/hotelmanager/</a>
+                </div>
+            </div>
 
-<body>
-    <header></header>
-    <div class="wrapper">
-        <div class="left-box"><img class="img" src="img/office.jpg" alt="">
-            <p class="bottom-caption">
-                The traveler’s first and independent
-                source of information for finding the
-                ideal hotel at the lowest rates.
-            </p>
+            <!-- Right Description -->
+            <div class="up-right">
+                <div class="up-right-title">
+                    <h2><img src="home.svg"></img> Reputation Ranking</h2>
+                </div>
+                <div class="up-right-description">
+                    <p>By signing up for Direct Connect, Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Vel unde quasi ab animi optio voluptatum. independent
+                        hoteliers are able to display live rates and
+                        availability directly in trivago hotel search results.
+                        In addition to boosting booking volume and
+                        strengthening the hotel brand, third party
+                        booking site involvement is eliminated – saving Vel unde quasi ab animi optio voluptatum. independent
+                        hoteliers are able to display live rates and
+                        the hotelier commission costs.
+                    </p>
+                </div>
+            </div>
         </div>
-        <div class="right-box"></div>
 
+        <!-- Img Section-->
+        <div class="mid-container"></div>
 
-
-        <div class=""></div>
-        <div class="title">
-            <h2>Welcome to Trivago</h2>
-
+        <!-- Bottom Descriotion-->
+        <div class="down-container">
+        <div class="down-left"></div>
+            <div class="down-right">
+                <div class="down-right-title">
+                <h2> Hotel Test</h2>
+                </div>
+                <div class="down-right-description">
+                    <p>Sint ex amet laborum in incididunt fugiat occaecat consectetur eu proident.
+                        Dolore officia do proident do eu nulla aliquip minim Et consequat quis reprehenderit irure fugiat
+                        officia ut non mollit fugiat aliquip minim incididunt officia do proident. 
+                        Est adipisicing labore cupidatat veniam sunt qui ex aute occaecat et enim. 
+                        In fugiat velit incididunt incididunt sunt laboris quis cupidatat in commodo. 
+                        Aliqua cupidatat ipsum eu aute ad.  do exercitation.
+                    </p>
+                    <a href="#" class="mid-link">http://www.trivago.com/hotelmanager/</a>
+                </div>
+            </div>
         </div>
-        <div class="para" style="font-family: font1">
-            <p>As the world’s largest hotel search, trivago compares deals from
-                over 700,000 hotels on more than 175 booking sites daily on our
-                mission to be and remain <em> <b> the traveler’s first and independent
-                        source of information for finding the ideal hotel
-                        at the lowest rates.</b></em> </p>
 
-            <p> This is what we - a team of over 500 innovative, driven minds
-                from all over the globe - wake up for every day. We love what
-                we do, and our passion to create the most effective, user-friendly
-                hotel search website is not only felt in our offices in Düsseldorf
-                and Palma but is also prominent in the product we create.
-            </p>
-            <p>
-                On over 45 platforms and in more than 25 languages, you can
-                witness the results of merging world-class search technology
-                with eye-catching design and outstanding hotel content.
-            </p>
-            <p>
-                No matter where in the world you are searching, trivago is your
-                partner in locating a home away from home – and for an average
-                of 35% savings per booking, feeling at home has never been
-                easier on the pocketbook. Boasting a growth rate of 100% every
-                year since 2008, we have bloomed into one of Europe’s most
-                well-known travel brands, and by fostering over 50 million
-                hotel/guest connections per month, we are making our way
-                to the center of the travel industry.
-            </p>
-            <p>
-                Welcome to trivago. It’s nice to see you here.
-            </p>
-        </div>
-    </div>
-</body>
-
+            <div class="empty-space"></div>
+    </body>
 </html>
+
+
